config: Add an 'extra_prefixes' variable
Add an extra_prefixes variable that will instruct jhbuild to act as it
has been run inside of itself with two separate prefixes.  This allows
setting up a 'cascading' environment where you could have multiple
layers of jhbuild on top of each other (for different sets of work).

It also allows for proper handling of /usr/local on systems that install
software there (and we set 'extra_prefixes' to contain '/usr/local' by
default on those systems).

The extra_prefixes list is traversed so that the first entry has highest
precedence.

--- a/doc/C/index.docbook
+++ b/doc/C/index.docbook
@@ -1733,6 +1733,25 @@ Optional packages: (JHBuild will build the missing packages)
               supported by Git and Bazaar repositories.</simpara>
           </listitem>
         </varlistentry>
+        <varlistentry id="cfg-extra-prefixes">
+          <term>
+            <varname>extra_prefixes</varname>
+          </term>
+          <listitem>
+            <simpara>A list of strings specifying, in precedence order, the list
+              of extra prefixes.  JHBuild sets many environment variables (such
+              as <envar>LD_LIBRARY_PATH</envar>, <envar>PKG_CONFIG_PATH</envar>
+              and <envar>XDG_DATA_DIRS</envar>) based on the
+              <varname>prefix</varname> variable.  Adding directories to
+              <varname>extra_prefixes</varname> will cause these prefixes to be
+              included as well, at a lower precedence than the JHBuild
+              <varname>prefix</varname>, but at a higher precendence than system
+              directories.  This variable is empty by default except on systems
+              that install software in <filename>/usr/local</filename>, in which
+              case it contains this directory.
+            </simpara>
+          </listitem>
+        </varlistentry>
         <varlistentry id="cfg-help-website">
           <term>
             <varname>help_website</varname>
