docs: fix a docbook validation error

--- a/doc/C/index.docbook
+++ b/doc/C/index.docbook
@@ -2195,8 +2195,8 @@ Optional packages: (JHBuild will build the missing packages)
               specified directory instead of <varname>checkoutroot</varname>.
               This is useful if you have multiple JHBuild environments or
               regularly clear out <varname>checkoutroot</varname> and want to
-              reduce bandwidth usage.</simpara>  Defaults to
-              <literal>'~/jhbuild/downloads'</literal>.
+              reduce bandwidth usage.  Defaults to
+              <literal>'~/jhbuild/downloads'</literal>.</simpara>
           </listitem>
         </varlistentry>
         <varlistentry id="cfg-tinderbox-outputdir">
